@@ -5,8 +5,8 @@
 #ifndef PROTOCOL_H
 #define PROTOCOL_H
 
-unsigned short const payload_size = 1234;
-unsigned long const message_count = 1000;
+unsigned short const payload_size = 200;
+unsigned long const message_count = 100;
 
 struct Message
 {
